--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="profile__contact">
         <div class="contact__email">
-          <img src="email2.jpg" alt="email icon" width="25px" height="25px">
+          <img src="images/email2.jpg" alt="email icon" width="25px" height="25px">
           <p>stokucabranko1@gmail.com</p>
         </div>
         <div class="contact__phone">
@@ -193,27 +193,32 @@
 
     <!-- Blog section -->
     <section class="blog">
-      <div class="blog__count card">
+      <!-- <div class="blog__count card">
         <h5>Blogs (1)</h5>
-      </div>
+      </div> -->
 
       <div class="blog__card card card--blog">
-        <p class="blog__tag">Blog</p>
         <div class="blog__cover">
           <div class="blog__title">
-            <h3>How to organize your CSS</h3>
+            <h3>Education</h3>
           </div>
-          <div class="blog__image">
+          <!-- <div class="blog__image">
             <img src="images/blog-image-sm.jpg" alt="">
-          </div>
+          </div> -->
         </div>
         <div class="blog__details">
-          <p>In this article I tell the story about Proin eu justo sit amet lacus bibendum tincidunt.
-            Vivamus non volutpat nisl, a luctus mi.</p>
-          <p>Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada
-            molestie.</p>
+          <p><strong>Sept. 2012-Jun.2019</strong> Degree in history, Faculty of Philosophy in Novi Sad
+            - University of Novi Sad (Serbia)
+            •	Focus on: History, languages and pedagogy.
+            </p>
+          <p><strong>Sep. 2008- Jun.2012</strong> Technical High- School for computer construction, City of Apatin,
+            Vojvodina, Serbia
+            </p>
+          <p><strong></strong> Technical High- School for computer construction, City of Apatin,
+            Vojvodina, Serbia
+            </p>
         </div>
-        <p class="blog__platform">dev.to</p>
+        <!-- <p class="blog__platform">dev.to</p> -->
       </div>
     </section>
 
